modify 1.0 bridge
